[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/black.png" type="Texture" id=1]
[ext_resource path="res://src/Main.gd" type="Script" id=2]
[ext_resource path="res://src/Box Number.gd" type="Script" id=3]
[ext_resource path="res://src/MPS Calculator.gd" type="Script" id=4]
[ext_resource path="res://assets/main_theme.tres" type="Theme" id=5]
[ext_resource path="res://src/spinner.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/white.png" type="Texture" id=7]
[ext_resource path="res://src/Golden.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Game Field.gd" type="Script" id=9]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=1]
0/name = "black.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Money" type="Label" parent="."]
margin_right = 118.0
margin_bottom = 31.0
theme = ExtResource( 5 )
text = "Money: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money Per Second" type="Label" parent="."]
margin_left = 1.0
margin_top = 31.0
margin_right = 119.0
margin_bottom = 62.0
theme = ExtResource( 5 )
text = "MPS: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 65.0
margin_right = 468.0
margin_bottom = 600.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Performance" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 49.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="TabContainer/Performance"]
margin_right = 40.0
margin_bottom = 31.0
text = "Performance Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/Performance"]
margin_top = 43.0
margin_right = 40.0
margin_bottom = 74.0
text = "% of boxes to simulate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Simulate" type="HSlider" parent="TabContainer/Performance"]
margin_left = 260.0
margin_top = 54.0
margin_right = 460.0
margin_bottom = 74.0
min_value = 1.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="TabContainer/Performance"]
margin_top = 84.0
margin_right = 40.0
margin_bottom = 115.0
text = "% of boxes to show"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Show" type="HSlider" parent="TabContainer/Performance"]
margin_left = 260.0
margin_top = 95.0
margin_right = 460.0
margin_bottom = 115.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boxes" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 49.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="TabContainer/Boxes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -53.0
theme = ExtResource( 5 )
text = "Box Shop"

[node name="Box Number" type="Control" parent="TabContainer/Boxes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 35.0
margin_right = -8.0
margin_bottom = -18.0
rect_min_size = Vector2( 422, 57 )
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="TabContainer/Boxes/Box Number"]
margin_right = 418.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 51 )
theme = ExtResource( 5 )
text = "Purchase 5 more boxes for %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="PopupDialog" parent="TabContainer/Boxes/Box Number"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -366.0
margin_bottom = 51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earnings" type="Label" parent="TabContainer/Boxes/Box Number/Popup"]
margin_left = 12.0
margin_top = 11.0
margin_right = 363.0
margin_bottom = 45.0
text = "You have %s of %s boxes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boxes" type="ScrollContainer" parent="TabContainer/Boxes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 90.0
margin_right = -7.0
margin_bottom = -1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Boxes/Boxes"]
margin_right = 422.0
margin_bottom = 92.0
rect_min_size = Vector2( 422, 92 )

[node name="Game Field" type="Node2D" parent="."]
position = Vector2( 250, 0 )
script = ExtResource( 9 )

[node name="spinner" parent="Game Field" instance=ExtResource( 6 )]
position = Vector2( 512, 300 )

[node name="TileMap" type="TileMap" parent="Game Field"]
position = Vector2( 292, 0 )
scale = Vector2( 0.625, 0.625 )
tile_set = SubResource( 1 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 196608, 0, 0, 196618, 0, 0, 262144, 0, 0, 262154, 0, 0, 327680, 0, 0, 327690, 0, 0, 393216, 0, 0, 393226, 0, 0, 458752, 0, 0, 458762, 0, 0, 524288, 0, 0, 524298, 0, 0, 589824, 0, 0, 589834, 0, 0, 655360, 0, 0, 655370, 0, 0, 720896, 0, 0, 720906, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0 )

[node name="Starting Spot" type="Sprite" parent="Game Field"]
modulate = Color( 0.121569, 0.121569, 0.121569, 1 )
position = Vector2( 669, 300 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Game Field"]
autostart = true

[node name="Save Button" type="Button" parent="."]
margin_left = 666.0
margin_top = 24.0
margin_right = 846.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "Save Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 666.0
margin_top = 538.0
margin_right = 846.0
margin_bottom = 575.0
theme = ExtResource( 5 )
text = "RESET GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Golden" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 550, 223 )

[node name="Save" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="MPS Calculator" type="Timer" parent="."]
wait_time = 0.25
autostart = true
script = ExtResource( 4 )

[connection signal="button_up" from="TabContainer/Boxes/Box Number/Buy" to="TabContainer/Boxes/Box Number" method="_on_Buy_button_up"]
[connection signal="mouse_entered" from="TabContainer/Boxes/Box Number/Buy" to="TabContainer/Boxes/Box Number" method="_on_Buy_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/Boxes/Box Number/Buy" to="TabContainer/Boxes/Box Number" method="_on_Buy_mouse_exited"]
[connection signal="timeout" from="Game Field/Timer" to="Game Field" method="_on_Timer_timeout"]
[connection signal="button_up" from="Save Button" to="." method="_on_Save_Button_button_up"]
[connection signal="button_up" from="Reset" to="." method="_on_Reset_button_up"]
[connection signal="timeout" from="Save" to="." method="_on_Save_timeout"]
[connection signal="timeout" from="MPS Calculator" to="MPS Calculator" method="_on_Calculator_timeout"]
